Adjust content width to avoid horizontal scrollbar for longer pages
[cloud]

ERM21829

--- a/resources/stylesheets/component/common/custommenu.header.less
+++ b/resources/stylesheets/component/common/custommenu.header.less
@@ -20,6 +20,7 @@
 }
 
 .bs-custom-menu-header-container {
+	margin-bottom: 0;
 	z-index: 21;
 	.bs-custom-menu.header {
 		position: relative;
