--- a/resources/stylesheets/component/common/main.less
+++ b/resources/stylesheets/component/common/main.less
@@ -12,11 +12,11 @@ body.mediawiki.x-body {
 		font-size: 0.875rem;
 		box-sizing: border-box;
 		height: 100%;
-		max-width: 100vw;
+		max-width: 100%;
 
 		& > .main-content.container {
-			width: 100vw;
-			max-width: 100vw;
+			width: 100%;
+			max-width: 100%;
 			&::before {
 				display: none;
 			}
